// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Mixins basic + accum 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "accum": Object {
          "logger": Object {
            "go": "log",
          },
          "luger": Object {
            "go": "bang",
          },
        },
        "logger": Object {
          "go": "log",
        },
        "luger": Object {
          "go": "bang",
        },
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Mixins property overwrite 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "logger": Object {
          "go": "brrr",
        },
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Object + String = Format 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "omg": true,
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Object 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "omg": true,
      },
      "level": 40,
      "msg": undefined,
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Object with undefined props 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "omg": undefined,
      },
      "level": 40,
      "msg": undefined,
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Object, String Format, String 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "omg": true,
      },
      "level": 40,
      "msg": "hello world",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Object, String Format, String 2`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "data": Object {
        "omg": true,
      },
      "level": 40,
      "msg": "hello world:and 123",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic String Format, Object 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello { omg: true }",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic String, Object 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello { omg: true }",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Trace Caller Auto (development) 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Trace Caller Auto (production) 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Trace Caller Force false (development) 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic Trace Caller Force true (production) 1`] = `
Array [
  Array [
    Object {
      "ctx": Object {
        "hostname": "ws7",
        "pid": 1337,
      },
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`Basic allow flush and reuse 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Before 1",
      "name": "Error",
      "stack": "Error: Before 1
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:152:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "Before 1",
    "pid": 1337,
    "time": 1234567890000,
  },
  Object {
    "err": Object {
      "message": "Before 2",
      "name": "Error",
      "stack": "Error: Before 2
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:153:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "Before 2",
    "pid": 1337,
    "time": 1234567890000,
  },
  Object {
    "err": Object {
      "message": "After 1",
      "name": "Error",
      "stack": "Error: After 1
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:155:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "After 1",
    "pid": 1337,
    "time": 1234567890000,
  },
  Object {
    "err": Object {
      "message": "After 2",
      "name": "Error",
      "stack": "Error: After 2
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:156:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "After 2",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`Basic allow undefined logger level 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Fake",
      "name": "Error",
      "stack": "Error: Fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:141:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "Fake",
    "pid": 1337,
    "time": 1234567890000,
  },
  Object {
    "err": Object {
      "message": "Fake",
      "name": "Error",
      "stack": "Error: Fake
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/index.test.js:142:22)",
    },
    "hostname": "testhost",
    "level": 60,
    "msg": "Fake",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;
